--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>web</title>
+    <title>Web</title>
     <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="https://en.wikipedia.org/wiki/World_Wide_Web">web</a>은 무엇인가?</h1>
+<h1><a href="https://en.wikipedia.org/wiki/World_Wide_Web">Web</a>은 무엇인가?</h1>
 
 <ol>
     <li><a href="1.html">html</a></li>
