--- a/2.html
+++ b/2.html
@@ -15,6 +15,6 @@
 </ol>
 
 <img src="css.jpg" alt="html image" width="100" height="100">
-<p><strong>Style Sheets (CSS)</strong> is <u>a style sheet language</u> used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
+<p><strong>CascadingStyle Sheets (CSS)</strong> is <u>a style sheet language</u> used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
 </body>
 </html>
